assets/ignition-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignition-provider
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: ignition-provider
  type: ClusterIP
