assets/ignition-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ignition-provider
spec:
  to:
    kind: Service
    name: ignition-provider
